--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "lodash": "^4.3.0"
   },
   "dependencies": {
+    "gsap": "^1.20.2",
     "slick": "^1.12.2",
     "slick-carousel": "^1.7.1"
   }
